--- a/ApiGateway.Davivienda/ApiGateway.Davivienda/appsettings.json
+++ b/ApiGateway.Davivienda/ApiGateway.Davivienda/appsettings.json
@@ -5,48 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Ocelot": {
-    "Routes": [
-      {
-        "DownstreamPathTemplate": "/api/transactions",
-        "DownstreamScheme": "https",
-        "DownstreamHostAndPorts": [
-          {
-            "Host": "api",
-            "Port": 8080
-          }
-        ],
-        "UpstreamPathTemplate": "/transactions",
-        "UpstreamHttpMethod": [ "Get", "Post", "Put", "Delete" ]
-      },
-      {
-        "DownstreamPathTemplate": "/api/transactions/{id}",
-        "DownstreamScheme": "https",
-        "DownstreamHostAndPorts": [
-          {
-            "Host": "api",
-            "Port": 8080
-          }
-        ],
-        "UpstreamPathTemplate": "/transactions/{id}",
-        "UpstreamHttpMethod": [ "Get" ]
-      },
-      {
-        "DownstreamPathTemplate": "/api/customers",
-        "DownstreamScheme": "https",
-        "DownstreamHostAndPorts": [
-          {
-            "Host": "localhost",
-            "Port": 5002
-          }
-        ],
-        "UpstreamPathTemplate": "/customers",
-        "UpstreamHttpMethod": [ "Get", "Post", "Put", "Delete" ]
-      }
-    ],
-    "GlobalConfiguration": {
-      "BaseUrl": "https://localhost:8080"
-    }
-  }
-}
+  "AllowedHosts": "*"
+ }
